--- a/index.html
+++ b/index.html
@@ -1,1 +1,316 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Delhi University</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@300&family=Plus+
+    Jakarta+Sans&family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+</head>
+<body>
+
+<!-- ------------------ HOME SECTION STARTS ----------------------------------- -->
+<header class="header">
+        <nav>
+            <a href="index.html"><img src="images/DU_logo.png"></a>
+            <div class="nav-links" id="navLinks">
+            <i class="fa fa-times" onclick="hideMenu()"></i>
+                <ul> 
+                   <li><a href="">Home</a></li>
+                   <li><a href="">About</a></li>
+                   <li><a href="">Courses</a></li>
+                   <li><a href="">Blogs</a></li>
+                   <li><a href="">Contact Us</a></li>
+                </ul>
+            </div>
+            <i class="fa fa-bars" onclick="showMenu()"></i>
+        </nav>
+
+        <div class="text-box">
+            <h1>UNIVERSITY OF DELHI</h1>
+            <p>The University of Delhi, informally known as Delhi University (DU), is a collegiate, public, central university 
+                located in New Delhi, India. It was founded in 1922 by an Act of the Central Legislative Assembly and is 
+                recognized as an Institute of Eminence (IoE) by the University Grants Commission (UGC).</p>
+            <a href="" class="visit-button">Visit Us Again for more Info</a>
+        </div>
+    </header>
+<!-- ------------------- HOME SECTION ENDS ---------------------------------->
+
+<!-- ================================================================== -->
+
+<!-- ----------------- COURSES WE OFFER STARTS HERE ------------------------>
+
+<section class="course">
+        <h2>COURSES WE OFFER</h2>
+        <p> As a collegiate university, its main functions are divided between the academic departments of the university and constituent 
+            colleges. Consisting of three colleges,
+             two faculties, and 750 students at its founding, the University of Delhi has since become India's largest institution of
+              higher learning and among the large
+            st in the world. 
+
+        </p>
+        <p>
+            The university has 16 faculties and 86 departments distributed across its North and South
+            campuses. It has 77 constituent colleges and five other institutes.
+             The Vice President of India serves as the university chancellor.
+        </p>
+
+<div class="row">
+
+        <div class="course-column">
+            <h3>UNDER-GRADUATION</h3>
+            <p>BE/B.TECH-CS/IT/MECH/EE/EEE/ETC. <br> BA/BBA/BCOM/BCA/B.Sc
+            </p>
+        </div>
+
+        <div class="course-column">
+            <h3>POST-GRADUATION</h3>
+             <p>ME/M.TECH-CS/IT/MECH/EE/EEE <br>
+                MBA/M.Sc/MCA
+            </p> 
+        </div>
+        <div class="course-column">
+            <h3>Ph.D.</h3>
+            <p>English/
+                French/
+                Financial studies/
+                Geography/
+                Genetics/
+                German/
+                Geology/
+                Hispanic/
+                Hindi</p>
+        </div>
+</div>
+</section>
+
+<!-- ----------------- COURSES WE OFFER ENDS HERE --------------------->
+
+<!-- ================================================================== -->
+
+<!-- -------------------------- OUR NATIONAL UNIVERSITY STARTS HERE ---------------------------- -->
+
+<section class="campus">
+            <h2>OUR NATIONAL UNIVERSITY</h2>
+            <p>
+                The University of Delhi, informally known as Delhi University (DU), is a collegiate, public, central university 
+                located in New Delhi, India. It was founded in 1922 by an Act of the Central Legislative Assembly and is recognized 
+                as an Institute of Eminence (IoE) by the University Grants Commission (UGC).
+            </p>
+
+            <p> 
+                As a collegiate university, its main functions are divided between the academic departments of the university 
+                and constituent colleges. Consisting of three colleges, two faculties, and 750 students at its founding, the University of Delhi 
+                has since become India's largest institution of higher learning and among the largest in the world. The university has 16 faculties 
+                and 86 departments distributed across its North and South campuses. It has 77 constituent colleges and five other institutes. 
+                The Vice President of India serves as the university chancellor.
+            </p>
+            </p>
+
+<div class="row">
+
+            <div class="campus-column">
+            <img src="images/campus1.png" alt="The Hindu College">
+            <div class="campus_1">
+            <h3>The Hindu College</h3>
+            </div>
+            </div>
+
+            <div class="campus-column">
+            <img src="images/campus2.png" alt="Kirodi Mal College">
+            <div class="campus_2">
+            <h3>Kirodi Mal College</h3>
+            </div>
+            </div>
+
+            <div class="campus-column">
+            <img src="images/campus3.png" alt="Hansraj College">
+            <div class="campus_3">
+            <h3>Hansraj College</h3>
+            </div>
+            </div>
+            </div>
+</div>
+</section>
+
+<!-- -------------------------- OUR NATIONAL UNIVERSITY ENDS HERE ---------------------------- -->
+
+<!-- ================================================================== -->
+
+<!-- -------------------------- IGNOU UNIVERSITY FACILITIES STARTS HERE ---------------------------- -->
+<section class="facilities">
+
+        <h2>OUR FACILITIES</h2>
+        <P>There are 91 colleges affiliated to the University of Delhi, spread across Delhi. North Campus and South Campus 
+            serve as the two main campuses of the university. Zakir Husain Delhi College, which is situated in the central 
+            part of New Delhi, is the oldest college in Delhi carrying 300 years of legacy.
+        </P>
+
+    <div class="row">
+
+        <div class="facilities-col">
+
+        <img src="./images/college_library.jpg" alt="Library pic">
+        <h3>World Class library</h3>
+        <p>The College Library is one of our most significant assets, which has an online cataloguing system 
+            that provides access to library resources. All our books are coded through dedicated software.</p>
+
+        </div>
+
+    <div class="facilities-col">
+
+            <img src="./images/college_playground.jpg" alt="playground pic">
+            <h3>India's Best Playground</h3>
+            <p>Education is incomplete without sports. For this purpose, our College organizes Annual Sports Meet 
+                every year including competition regarding indoor as well as outdoor games.
+            </p>
+    </div>
+
+    <div class="facilities-col">
+            <img src="./images/college-cafeteria.jpg" alt="canteen pic">
+            <h3>College Cafeteria (Fully Hygenic)</h3>
+            <p>
+                The food and snacks supplied by outside restaurants are usually sub standard and injurious to health. 
+                So, students can get hygienic food in the college canteen at affordable prices for students.
+            </p>
+        </div>
+    </div>
+
+</section>
+
+<!-- -------------------------- OUR FACILITIES ENDS HERE ---------------------------- -->
+
+<!-- ================================================================== -->
+
+<!-- -------------------------- OUT TESTIMONIALS - STUDENT'S REVIEW SECTION STARTS HERE ---------------------------- -->
+
+<section class="student">
+
+            <h2>WHAT OUR STUDENT'S SAYS...!!!</h2>
+            <p> 
+                The college infrastructure is pretty great. The classrooms have A/C's which makes it easier in the summers 
+                Classrooms also have WiFi for internet access. The library is big and is very spacious. The canteen food is hygenic.
+            </p>
+
+    <div class="row">
+            <div class="student_column">
+                <img src="images/student4.jpg" alt="Student Pic">
+                <div>
+                <p>
+                    The campus is well equipped with good infrastructure facilities. The classrooms are well lit and ventilated. 
+                </p>
+                <h3>AAYUSH VERMA</h3>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-half-o"></i>
+                </div>
+            </div>
+
+            <div class="student_column">
+                <img src="images/student3.jpg" alt="Student Pic">
+                <div>
+                <p>
+                    The food provided in the canteen is priced decently with a lot of choices to pick from along with an in-house CCD.
+                </p>
+                <h3>PARICHARY PARI</h3>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-half-o"></i>
+                </div>
+            </div>
+
+            <div class="student_column">
+                <img src="images/student2.jpg" alt="Student Pic">
+                <div>
+                <p>
+                   The placements of Sandesh Arun are pretty good. even the Student getting average package are very happy.                    
+                </p>
+                <h3>SANDESH TITAMARE</h3>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-half-o"></i>
+                </div>
+            </div>
+    </div>
+</section>
+
+<!-- -------------------------- OUT TESTIMONIALS - STUDENT'S REVIEW SECTION ENDS HERE ---------------------------- -->
+
+<!-- ================================================================== -->
+
+ <!------------------- CALL TO ACTION SECTION STARTS HERE ----------------------->
+
+ <section class="cta">
+
+    <h2>Enroll For Our Various Online Courses<br/> Anywhere From The World</h2>
+
+    <a href="#" class="visit-button">CONTACT US</a>
+
+</section>
+
+<!-- ----------------- CALL TO ACTION SECTION ENDS HERE -------------------------------->
+
+
+<!-- -------------------------- LOCATION ------------------------------------- -->
+
+<section class="map">
+
+    <div>
+        <h2>Our Location</h2>
+        <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit. ipsum dolor sit amet, consectetur adipiscing elit.</P>
+    </div>
+
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3500.0665400032167!2d77.20809291440857!3d28.687656088336137!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfd93bd399ceb%3A0xa3a8e12fd0707e77!2sUniversity%20of%20Delhi%20North%20Campus%20Conference%20Centre!5e0!3m2!1sen!2sin!4v1657828826299!5m2!1sen!2sin" width="100%" height="550px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+</section>
+
+<!-- --------------------------- FOOTER SECTION STARTS HERE ---------------------------- -->
+<footer class="footer">
+
+        <h4>ABOUT US</h4>
+        <p>The University of Delhi is a premier university of the country with a venerable legacy and international 
+            acclaim for highest academic standards, diverse educational programmes, distinguished faculty, illustrious alumni, 
+            varied co-curricular activities and modern infrastructure. </p>
+
+    <div class="icons">
+        <i class="fa fa-facebook"></i>
+        <i class="fa fa-twitter"></i>
+        <i class="fa fa-instagram"></i>
+        <i class="fa fa-linkedin"></i>
+    </div>
+
+</footer>
+
+
+<!-- --------------------------- FOOTER SECTION ENDS HERE ---------------------------- -->
+
+
+
+
+<!-- ---------JavaScript for Toggle Menu------------- -->
+    <script src="./App.js">
+        // //These codes are in external link of js file
+        // var navLinks = document.getElementById("navLinks");
+        // function showMenu(){
+        //     navLinks.style.right = "0";
+        // }
+        // function hideMenu(){
+        //     navLinks.style.right = "-200px";
+        // }
+    </script>
+</body>
+</html>
