--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul> 
                    <li><a href="">Home</a></li>
-                   <li><a href="">About</a></li>
-                   <li><a href="">Courses</a></li>
-                   <li><a href="">Blogs</a></li>
-                   <li><a href="">Contact Us</a></li>
+                   <li><a href="#our_campus">About</a></li>
+                   <li><a href="#our_courses">Courses</a></li>
+                   <li><a href="#our_blog">Blogs</a></li>
+                   <li><a href="#contact_us">Contact Us</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -48,7 +48,7 @@
 
 <!-- ----------------- COURSES WE OFFER STARTS HERE ------------------------>
 
-<section class="course">
+<section class="course" id="our_courses">
         <h2>COURSES WE OFFER</h2>
         <p> As a collegiate university, its main functions are divided between the academic departments of the university and constituent 
             colleges. Consisting of three colleges,
@@ -98,7 +98,7 @@
 
 <!-- -------------------------- OUR NATIONAL UNIVERSITY STARTS HERE ---------------------------- -->
 
-<section class="campus">
+<section class="campus" id="our_campus">
             <h2>OUR NATIONAL UNIVERSITY</h2>
             <p>
                 The University of Delhi, informally known as Delhi University (DU), is a collegiate, public, central university 
@@ -192,7 +192,7 @@
 
 <!-- -------------------------- OUT TESTIMONIALS - STUDENT'S REVIEW SECTION STARTS HERE ---------------------------- -->
 
-<section class="student">
+<section class="student" id="our_blog">
 
             <h2>WHAT OUR STUDENT'S SAYS...!!!</h2>
             <p> 
@@ -267,7 +267,7 @@
 
 <!-- -------------------------- LOCATION ------------------------------------- -->
 
-<section class="map">
+<section class="map" >
 
     <div>
         <h2>Our Location</h2>
@@ -279,7 +279,7 @@
 </section>
 
 <!-- --------------------------- FOOTER SECTION STARTS HERE ---------------------------- -->
-<footer class="footer">
+<footer class="footer" id="contact_us">
 
         <h4>ABOUT US</h4>
         <p>The University of Delhi is a premier university of the country with a venerable legacy and international 
