--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 <p>
                     The food provided in the canteen is priced decently with a lot of choices to pick from along with an in-house CCD.
                 </p>
-                <h3>PARICHARY PARI</h3>
+                <h3>PARICHAYA PARI</h3>
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
